# device-builder

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  MANIFEST.in  README.md  __main__.py  catalogs.py  codecov.yml  compare_legacy.md  entries.py  metadata.py  models.py  pyproject.toml  pyrightconfig.json  requirements.txt  server.py  settings.py
.github/: PULL_REQUEST_TEMPLATE.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/actions/generate-release-notes/: action.yml  generate_notes.py  test_generate_notes.py
.github/actions/resolve-release-versions/: action.yml
.github/actions/setup-uv-python/: action.yml
.github/workflows/: auto-release.yml  draft-next-releases.yml  pr-labels.yaml  real-compile-tests.yml  release-drafter.yml  release.yml  sync-component-catalog.yml  sync-device-catalog.yml  test.yml
docker/: entrypoint.sh  install_new_dashboard.sh
docs/: API.md  ARCHITECTURE.md
esphome_device_builder/: __init__.py  __main__.py  boards.py  catalogs.py  constants.py  dashboard.py  device_builder.py  entries.py  metadata.py  models.py  section_config.py  server.py  settings.py  yaml_editor.py
esphome_device_builder/api/: __init__.py  boards.py  components.py  legacy.py  ws.py
esphome_device_builder/boards/: __init__.py  apollo-esp32-c6.yaml  apollo-esp32-s3.yaml  d1-mini.yaml  esp32-c3-devkitm-1.yaml  esp32-devkit-v1.yaml  esp32-s3-devkitc-1.yaml  nodemcuv2.yaml  rpi-pico.yaml
esphome_device_builder/components/: __init__.py  binary_sensor.yaml  button.yaml  fan.yaml  sensor.yaml
esphome_device_builder/controllers/: _build_size_refresher.py  _device_builder_base.py  _device_mqtt_coordinator.py  _device_mqtt_monitor.py  _device_scanner.py  _device_state_monitor.py  _dns_cache.py  _reachability_tracker.py  _task_controller_base.py  _wake_worker.py  auth.py  automations.py  boards.py  components.py  config.py  debug.py  devices.py  editor.py  firmware.py  onboarding.py  remote_build.py  remote_build_job_fanout.py  remote_build_peer_link.py  remote_build_peer_link_client.py  remote_build_submit_job.py
esphome_device_builder/controllers/_device_state_monitor/: _state.py  controller.py  importable.py  mdns.py  ping.py  shared.py
esphome_device_builder/controllers/automations/: __init__.py  catalog.py  controller.py  emitter.py  parsing.py  writing.py  writing_lists.py
esphome_device_builder/controllers/components/: __init__.py  _resolve.py  controller.py
esphome_device_builder/controllers/devices/: __init__.py  add_component.py  api_key.py  archive.py  constants.py  controller.py  firmware_sync.py  helpers.py  importable.py  logs.py  metadata.py  mutations_clone.py  mutations_create.py  mutations_simple.py  mutations_yaml.py  reachability.py  scan_change.py  state_callbacks.py  storage_regen.py  validate.py
esphome_device_builder/controllers/firmware/: __init__.py  _state.py  _upload_targets_fallback.py  bulk.py  clean.py  cli.py  constants.py  controller.py  jobs.py  (+8 more)
esphome_device_builder/definitions/: README.md  __init__.py  automations.index.json  boards.json  components.json
esphome_device_builder/handlers/: __init__.py  automations.py  boards.py  components.py  config_sections.py  devices.py  events.py  misc.py  operations.py  section_config.py  util.py
esphome_device_builder/helpers/: api.py  async_.py  atomic_io.py  auth.py  build_scheduler.py  build_size.py  config_hash.py  dashboard_advertise.py  dashboard_identity.py  device_yaml.py  event_bus.py  hostname.py  json.py  logging.py  mac_addresses.py  memory.py  parent_watchdog.py  peer_link_bundle.py  peer_link_identity.py  peer_link_noise.py  peer_link_resolver.py  process.py  remote_artifacts_materialise.py  remote_build_auth.py  remote_build_cleanup.py  remote_build_layout.py  remote_build_pairing.py  remote_build_token_seal.py  secrets_state.py  single_instance.py  storage.py  storage_path.py  stream.py  subprocess.py  subscriber_presence.py  version_compat.py  voluptuous_validators.py  yaml.py
esphome_device_builder/models/: __init__.py  api.py  automations.py  boards.py  common.py  components.py  devices.py  firmware.py  onboarding.py  preferences.py  remote_build.py
handlers/: __init__.py  boards.py  devices.py  misc.py  operations.py
script/: _light_schemas.py  check_catalog.py  check_device_catalog.py  enrich_boards.py  fix_descriptions.py  prefill_pins.py  setup  sync_boards.py  sync_components.py  sync_esphome_devices.py  validate_definitions.py
tests/: _recording_scanner.py  _storage_fixtures.py  conftest.py  test_address_cache.py  test_api_key.py  test_archive_device.py  test_artifact_platforms.py  test_atomic_io.py  test_auth.py  test_automations_branches.py  test_automations_controller.py  test_automations_parse.py  test_automations_sync.py  test_automations_writer.py  test_boards_json.py  test_build_scheduler.py  test_build_size.py  test_components_integration_docs.py  test_config_controller.py  test_config_hash.py  test_dashboard_advertise.py  test_dashboard_identity.py  test_dashboard_identity_tls.py  test_debug_memory.py  test_definitions_loader.py  test_device_builder_lifecycle.py  test_device_index.py  test_device_scanner_branches.py  test_device_scanner_order.py  test_device_scanner_request.py  test_device_state_event.py  test_device_yaml.py  test_discover.py  test_dns_cache.py  test_editor_controller.py  test_event_bus.py  test_event_bus_fire_lint.py  test_event_payload_contracts.py  test_executor_pool.py  test_featured_components.py  (+88 more)
tests/api/: test_legacy.py
tests/benchmarks/: test_peer_link_noise_xx.py  test_startup.py
tests/controllers/: __init__.py  test_boards.py  test_build_size_refresher.py  test_components.py  test_wake_worker.py
tests/e2e/: conftest.py  test_cancel_job.py  test_download_artifacts.py  test_install_round_trip.py  test_pair_and_session.py  test_submit_job.py  test_submit_job_fanout.py
tests/manual/: README.md  __init__.py  _mock_remote_e2e.py  download_mock_remote_e2e.py  run_mock_remote_e2e.py
tests/models/: test_firmware_job.py
tests/real_compile/: __init__.py  test_remote_local_pioenvs_preserved.py
(+2096 files in other folders)
