[project]
authors = [
  {name = "The ESPHome Authors", email = "esphome@openhomefoundation.org"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Home Automation",
]
dependencies = [
  "esphome-device-builder-frontend==0.1.20",
  "aiohttp>=3.9.0",
  "mashumaro>=3.13",
  "orjson>=3.9.0",
  "pyyaml>=6.0",
]
description = "ESPHome Device Builder"
license = "Apache-2.0"
maintainers = [
  {name = "Open Home Foundation", email = "esphome@openhomefoundation.org"},
]
name = "esphome-device-builder"
readme = "README.md"
requires-python = ">=3.12"
version = "0.0.0" # Set by GH action on release

[project.optional-dependencies]
esphome = [
  "esphome>=2024.1.0",
]
test = [
  "blockbuster>=1.5.5,<1.6",
  "codespell==2.4.2",
  "jsonschema>=4.20.0",
  "mypy==1.20.2",
  "pre-commit==4.6.0",
  "pre-commit-hooks==6.0.0",
  "pytest==9.0.3",
  "pytest-aiohttp==1.1.0",
  "pytest-codspeed==4.5.0",
  "pytest-cov==7.1.0",
  "pytest-xdist==3.8.0",
  "ruff==0.15.12",
]

[project.urls]
Documentation = "https://esphome.io"
Homepage = "https://esphome.io"
Issues = "https://github.com/esphome/device-builder/issues"
Repository = "https://github.com/esphome/device-builder"

[project.scripts]
esphome-device-builder = "esphome_device_builder.__main__:main"

[tool.setuptools]
include-package-data = true
packages = {find = {include = ["esphome_device_builder*"]}}
platforms = ["any"]
zip-safe = false

[tool.setuptools.package-data]
esphome_device_builder = [
  "py.typed",
  "definitions/boards/*/manifest.yaml",
  "definitions/boards/*/images/*",
  "definitions/components.json",
]

[tool.ruff]
fix = true
line-length = 100
show-fixes = true
target-version = "py312"

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
ignore = [
  "D101", # missing docstring in public class (too noisy for now)
  "D102", # missing docstring in public method (too noisy for now)
  "D103", # missing docstring in public function (too noisy for now)
  "D107", # missing docstring in __init__ (too noisy for now)
  "D203", # conflicts with D211
  "D213", # conflicts with D212
  "D417", # false positives
  "PLR0913", # too many arguments — not a useful constraint here
  "PLR2004", # magic value comparison — too noisy for status codes / structural checks
  "S101", # assert used for type checking
  "S104", # binding to all interfaces
]
select = [
  "A", # flake8-builtins
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "D", # pydocstyle
  "E", # pycodestyle errors
  "F", # pyflakes
  "FLY", # flynt: convert string formatting to f-strings
  "FURB", # refurb
  "I", # isort
  "N", # pep8-naming
  "PERF", # performance
  "PL", # pylint
  "RET", # flake8-return
  "RUF", # ruff-specific
  "S", # flake8-bandit
  "SIM", # flake8-simplify
  "T20", # flake8-print
  "UP", # pyupgrade
  "W", # pycodestyle warnings
]

[tool.ruff.lint.per-file-ignores]
# CLI scripts: noisy print is fine, late imports gate optional esphome introspection
# behind try/except ImportError, and several subprocess invocations are inherent.
"script/*" = ["T20", "S108", "S310", "S110", "S603", "S607", "E501", "PLC0415"]
"tests/*" = ["S105", "S106"] # hardcoded test credentials

[tool.codespell]
skip = "*.json,*/definitions/*"
ignore-words-list = "commitish"

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.isort]
known-first-party = ["esphome_device_builder"]

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
follow_imports = "silent"
ignore_missing_imports = true
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
# ``loadgroup`` is xdist's default ``load`` scheduler (each test goes
# to whichever worker is free) plus an extra rule: tests tagged
# ``@pytest.mark.xdist_group("<name>")`` are pinned to a single
# worker. The catalog-heavy modules use that to share one
# ``ComponentCatalog.load`` (~2s on Linux CI) per run instead of
# paying it on every xdist worker.
addopts = "--dist=loadgroup"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=75.0"]
